src/objects/SearchLayoutObj__c.object
<CustomObject>
    <description>desc</description>
    <fields>
        <fullName>age__c</fullName>
        <label>age</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>full_name__c</fullName>
        <label>full name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testfld__c</fullName>
        <label>testfld</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <label>SearchLayoutObj</label>
    <nameField>
        <label>SearchLayoutObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SearchLayoutObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>